--- a/assets/common.scss
+++ b/assets/common.scss
@@ -29,8 +29,21 @@
   margin: 0 auto;
 }
 
-.text-center{
-  text-align: center;
+.text{
+  &-center{
+    text-align: center;
+  }
+  &-color{
+    &--primary{
+      color:$colPrimary;
+    }
+    &--danger{
+      color:$colPink;
+    }
+    &--collect{
+      color:$colBlue;
+    }
+  }
 }
 
 .mb{
@@ -39,6 +52,9 @@
   }
 }
 .mt{
+  &-3{
+    margin-top:1.5em;
+  }
   &-5{
     margin-top:2.5em;
   }
@@ -462,6 +478,89 @@ button{
     }
   }
   &-top{
+    text-align: center;
+    position:relative;
+    &--tit{
+      font-size:30px;
+      .sub{
+        color:$colPrimary;
+        font-size:20px;
+        font-weight: 300;
+        margin-top:8px;
+      }
+    }
+    &--sub{
+      color:$textCol2;
+      font-size:20px;
+      font-weight: 300;
+      margin-top:36px;
+    }
+    &--button{
+      width:250px;
+      height:70px;
+      display:flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 5px;
+      font-size:30px;
+      color:#fff !important;
+      background-color:$colPrimary;
+      font-weight: 300;
+      margin:70px auto 100px;
+      transition:background-color .3s;
+      &:hover{
+        background-color:$colPrimaryHover;
+      }
+    }
+    &--shape{
+      div{
+        position:absolute;
+        z-index: -1;
+        &.line{
+          width:1px;
+          height:150px;
+          background:#888;
+          left:50%;
+          &:after{
+            content:"";
+            display:block;
+            width:7px;
+            height:7px;
+            background-color:$colPrimary;
+            transform:rotate(45deg);
+            position:absolute;
+            left:-3px;
+            bottom:-15px;
+          }
+        }
+        &.circle{
+          &-1{
+            width:270px;
+            height:270px;
+            background-color: rgba(190, 189, 253, .2);
+            border-radius: 50%;
+            left:130px;
+            top:80px;
+          }
+          &-2{
+            width:200px;
+            height:200px;
+            background-color: rgba(253, 246, 189, .2);
+            border-radius: 50%;
+            left:350px;
+            top:160px;
+          }
+          &-3{
+            width:300px;
+            height:300px;
+            background-color: rgba(253, 189, 246, .2);
+            border-radius: 50%;
+            left:200px;
+            top:280px;
+          }
+        }
+      }
+    }
     &--con{
       text-align: center;
       position:absolute;
@@ -533,12 +632,17 @@ button{
       }
     }
   }
+  &-section{
+    min-height: calc(100vh - 70px);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 }
 
 .login {
   min-height: calc(100vh - 70px);
   background-color: #F4F5F7;
-  margin-top: 70px;
   display: flex;
   align-items: center;
   justify-content: center;
