--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -470,9 +470,9 @@
         border-radius: 30px;
         &.preview-profile{
           background:#fff;
-          .character img{
-            width:110%;
-          }
+          // .character img{
+          //   width:110%;
+          // }
         }
       }
       &-save {
@@ -1528,6 +1528,12 @@
         left: 0;
         top: -13px;
         color:#fff;
+        &.font-sm{
+          font-size:1.3rem;
+        }
+        &.font-lg{
+          font-size:1.5rem;
+        }
       }
 
       .text {
@@ -1536,6 +1542,13 @@
         width:100%;
         word-break: break-all;
         line-height: 1.5;
+
+        &.font-sm{
+          font-size:1.3rem;
+        }
+        &.font-lg{
+          font-size:1.5rem;
+        }
       }
     }
   }
@@ -1764,10 +1777,10 @@
         width:100%;
         height:100%;
         img{
-          width:120%;
+          width:100%;
           position:absolute;
           left:50%;
-          top:45%;
+          top:50%;
           transform:translate(-50%, -50%);
           filter: drop-shadow(5px 0 #fff);
         }
@@ -2013,13 +2026,13 @@
         &:after {
           content: "";
           display: block;
-          width: 9px;
-          height: 9px;
+          width: 70%;
+          height: 70%;
           background: $colPrimary;
           border-radius: 50%;
           position: absolute;
-          left: 2px;
-          top: 2px;
+          left: 15%;
+          top: 15%;
         }
       }
 
