--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -539,6 +539,10 @@
         font-size: 1.8rem;
         margin-bottom: 10px;
         display:flex;
+        justify-content: space-between;
+        .right{
+          margin-bottom:-20px;
+        }
         .input-check{
           position:relative;
           top:2px;
@@ -557,7 +561,7 @@
         }
         &.sub{
           font-size:1.6rem;
-          margin-top:30px;
+          margin-top:20px;
         }
       }
 
@@ -2254,6 +2258,25 @@
       height:46px;
       &.active{
         background:$colPrimary;
+      }
+    }
+  }
+}
+
+.character-face{
+  text-align: center;
+  .button{
+    margin-top:15px;
+  }
+  &--list{
+    text-align: left;
+    max-height: 200px;
+    .item{
+      padding:5px;
+      cursor: pointer;
+      transition:color .3s;
+      &:hover{
+        color:$colPrimary;
       }
     }
   }
