--- a/assets/common.scss
+++ b/assets/common.scss
@@ -835,6 +835,15 @@ button{
           z-index: 1;
         }
 
+        &.character {
+          img{
+            width:auto;
+            height:100%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+          }
+        }
+
         .like {
           width: 30px;
           height: 30px;
