--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -1493,18 +1493,18 @@
       height:120%;
       top: unset;
       bottom:-25%;
-      left:50%;
-      transform:translateX(-50%);
+      left:-12%;
+      // transform:translateX(-50%);
         &-1, &-2{
           width:100%;
           height:100%;
         }
       &-2{
         .character:first-child{
-          transform:translateX(-70%);
+          left:-35%;
         }
         .character:last-child{
-          transform:translateX(-30%)
+          left:15%;
         }
       }
     }
