--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -543,6 +543,9 @@
         .right{
           margin-bottom:-20px;
         }
+        .ani{
+          margin-top:-4px;
+        }
         .input-check{
           position:relative;
           top:2px;
@@ -1134,146 +1137,6 @@
           }
         }
       }
-
-      .thumbnail{
-        &-list{
-          display:flex;
-          flex-wrap: wrap;
-          &--wrap{
-            height:calc(100vh - 215px);
-            &.type2{
-              height: auto;
-              max-height: 300px;
-            }
-          }
-          &--item{
-            width:130px;
-            height:130px;
-            border-radius: 10px;
-            border:2px solid $textCol2;
-            overflow:hidden;
-            margin:15px 15px 0 0;
-            cursor: pointer;
-            &.upload{
-              border-color:$colPrimary;
-              .label{
-                display:block;
-                width:100%;
-                height:100%;
-                background:url(~/static/images/icon/cloud.svg)no-repeat center / 20px;
-                cursor: pointer;
-                input{
-                  appearance: none;
-                  width: 0;
-                  height: 0;
-                  position:absolute;
-                }
-              }
-            }
-            img{
-              width:100%;
-            }
-            &.active{
-              border-color:$colPrimary;
-              .none{
-                background:url(~/static/images/icon/none_active.svg)no-repeat center;
-              }
-              .sound{
-                .btn{
-                  background:$colPrimary;
-                }
-              }
-            }
-            &.background{
-              position:relative;
-              img{
-                position:absolute;
-                left:0;
-                top:50%;
-                transform:translateY(-50%);
-              }
-            }
-            .none{
-              width:100%;
-              height:100%;
-              background:url(~/static/images/icon/none.svg)no-repeat center;
-            }
-            .sound{
-              width:100%;
-              height:100%;
-              font-size:1.4rem;
-              color:$textCol2;
-              position:relative;
-              .name{
-                width:100%;
-                height:100%;
-                display:block;
-                display:flex;
-                align-items: center;
-                justify-content: center;
-              }
-              .btn{
-                position:absolute;
-                left:0;
-                bottom:0;
-                width:100%;
-                background:$textCol2;
-                color:#fff;
-                text-align: center;
-                height: 30px;
-                font-size:1.2rem;
-                opacity: 0;
-                transition:all .3s;
-              }
-              &:hover .btn{
-                opacity: 1;
-              }
-            }
-            .btn-wrap{
-              position:absolute;
-              left:0;
-              bottom:0;
-              width:100%;
-              height:32px;
-              background:rgba(0, 0, 0, .8);
-              display:flex;
-              align-items: center;
-              justify-content: center;
-              opacity: 0;
-              transition:opacity .3s;
-              .btn{
-                color:#fff;
-                font-size:1.3rem;
-                font-weight: 300;
-                &:nth-child(2){
-                  margin-left:10px;
-                  position:relative;
-                  &:after{
-                    content:"";
-                    display:block;
-                    width:1px;
-                    height:13px;
-                    background:#888;
-                    position:absolute;
-                    left:-5px;
-                    top:1px;
-                  }
-                }
-              }
-            }
-          }
-          &.asset{
-            .thumbnail-list--item{
-              cursor: default;
-              &:hover{
-                .btn-wrap{
-                  opacity: 1;
-                }
-              }
-            }
-          }
-        }
-      }
     }
 
     .cut {
@@ -1388,6 +1251,152 @@
                 }
               }
             }
+          }
+        }
+      }
+    }
+  }
+}
+
+
+
+.thumbnail{
+  &-list{
+    display:flex;
+    flex-wrap: wrap;
+    &--wrap{
+      height:calc(100vh - 150px);
+      &.type2{
+        height: auto;
+        max-height: 300px;
+      }
+    }
+    &--item{
+      width:130px;
+      height:130px;
+      border-radius: 10px;
+      border:2px solid $textCol2;
+      overflow:hidden;
+      margin:15px 15px 0 0;
+      position:relative;
+      cursor: pointer;
+      &.upload{
+        border-color:$colPrimary;
+        .label{
+          display:block;
+          width:100%;
+          height:100%;
+          background:url(~/static/images/icon/cloud.svg)no-repeat center / 20px;
+          cursor: pointer;
+          input{
+            appearance: none;
+            width: 0;
+            height: 0;
+            position:absolute;
+          }
+        }
+      }
+      .img-wrap{
+        width:100%;
+        height:100%;
+      }
+      img{
+        width:100%;
+      }
+      &.active{
+        border-color:$colPrimary;
+        .none{
+          background:url(~/static/images/icon/none_active.svg)no-repeat center;
+        }
+        .sound{
+          .btn{
+            background:$colPrimary;
+          }
+        }
+      }
+      &.background{
+        img{
+          position:absolute;
+          left:0;
+          top:50%;
+          transform:translateY(-50%);
+        }
+      }
+      .none{
+        width:100%;
+        height:100%;
+        background:url(~/static/images/icon/none.svg)no-repeat center;
+      }
+      .sound{
+        width:100%;
+        height:100%;
+        font-size:1.4rem;
+        color:$textCol2;
+        position:relative;
+        .name{
+          width:100%;
+          height:100%;
+          display:block;
+          display:flex;
+          align-items: center;
+          justify-content: center;
+        }
+        .btn{
+          position:absolute;
+          left:0;
+          bottom:0;
+          width:100%;
+          background:$textCol2;
+          color:#fff;
+          text-align: center;
+          height: 30px;
+          font-size:1.2rem;
+          opacity: 0;
+          transition:all .3s;
+        }
+        &:hover .btn{
+          opacity: 1;
+        }
+      }
+      .btn-wrap{
+        position:absolute;
+        left:0;
+        bottom:0;
+        width:100%;
+        height:32px;
+        background:rgba(0, 0, 0, .8);
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        opacity: 0;
+        transition:opacity .3s;
+        .btn{
+          color:#fff;
+          font-size:1.3rem;
+          font-weight: 300;
+          &:nth-child(2){
+            margin-left:10px;
+            position:relative;
+            &:after{
+              content:"";
+              display:block;
+              width:1px;
+              height:13px;
+              background:#888;
+              position:absolute;
+              left:-5px;
+              top:1px;
+            }
+          }
+        }
+      }
+    }
+    &.asset{
+      .thumbnail-list--item{
+        cursor: default;
+        &:hover{
+          .btn-wrap{
+            opacity: 1;
           }
         }
       }
@@ -1979,6 +1988,15 @@
 .input {
   &-wrap {
     display: flex;
+    & + .input-wrap{
+      margin-top:10px;
+    }
+    .input-label{
+      width:100px;
+    }
+    .input-text{
+      width:calc(100% - 100px);
+    }
   }
 
   &-label {
@@ -2155,6 +2173,9 @@
   &-textarea {
     resize: none;
     height: auto;
+    &--wrap{
+      padding:10px 0;
+    }
   }
 
   &-text {
@@ -2275,8 +2296,59 @@
       padding:5px;
       cursor: pointer;
       transition:color .3s;
-      &:hover{
+      &:hover, &.active{
         color:$colPrimary;
+      }
+    }
+  }
+}
+
+.assets{
+  &-none{
+    display:flex;
+    flex-direction: column;
+    padding:50px;
+    align-items: center;
+    justify-content: center;
+    font-size:1.5rem;
+    line-height: 1.5;
+    border-radius: 10px;
+    color:#999;
+    background-color:#F4F5F7;
+    i{
+      font-size:2.5rem;
+      color:#bbb;
+      margin-bottom:5px;
+    }
+  }
+}
+
+.el-dialog{
+  &__headerbtn{
+    top:15px;
+    right:15px;
+  }
+  .thumbnail-list{
+    &--item{
+      border:none;
+    }
+    .thumbnail-check{
+      cursor: pointer;
+      input[type=checkbox]{
+        appearance: none;
+        &:checked + .box{
+          border:2px solid $colPrimary;
+        }
+      }
+      .box{
+        position:absolute;
+        left:0;
+        top:0;
+        right:0;
+        bottom:0;
+        border:2px solid #888;
+        z-index: 10;
+        border-radius: 10px;
       }
     }
   }
