--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -1268,7 +1268,10 @@
       height:calc(100vh - 150px);
       &.type2{
         height: auto;
-        max-height: 300px;
+        max-height: 320px;
+      }
+      &.type3{
+        height: auto;
       }
     }
     &--item{
@@ -1988,9 +1991,6 @@
 .input {
   &-wrap {
     display: flex;
-    & + .input-wrap{
-      margin-top:10px;
-    }
     .input-label{
       width:100px;
     }
@@ -2198,7 +2198,7 @@
     padding-right:20px;
     .input-file{
       width:100%;
-      height:570px;
+      height:535px;
       display:flex;
       align-items: center;
       justify-content: center;
@@ -2215,8 +2215,11 @@
         position:absolute;
         left:0;
         top:0;
+        display:flex;
+        justify-content: center;
         img{
-          width:100%;
+          width:auto;
+          height:100%;
         }
       }
       span{
@@ -2260,7 +2263,7 @@
     }
     .input-text{
       width:100%;
-      margin-bottom:40px;
+      margin-bottom:20px;
     }
     .input-check{
       .text{
