--- a/assets/common.scss
+++ b/assets/common.scss
@@ -711,6 +711,9 @@ button{
             transition:opacity .3s;
             opacity: 0;
           }
+          .xlg{
+            font-family: "NanumSquareNeo", sans-serif;
+          }
         }
       }
     }
