--- a/assets/common.scss
+++ b/assets/common.scss
@@ -7,7 +7,7 @@
 }
 
 ::selection {
-  background-color:rgba(253, 246, 189, 0.2);
+  background-color:rgba(255, 242, 139, 0.2);
  }
 
 // ::-webkit-scrollbar-thumb {
@@ -736,6 +736,9 @@ button{
         height:433px;
         img{
           position:absolute;
+          &:nth-child(2){
+            z-index: 1;
+          }
         }
       }
     }
