--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -2289,12 +2289,13 @@
 
 .character-face{
   text-align: center;
+  height:164px;
   .button{
     margin-top:15px;
   }
   &--list{
     text-align: left;
-    max-height: 200px;
+    height: 120px;
     .item{
       padding:5px;
       cursor: pointer;
