--- a/assets/common.scss
+++ b/assets/common.scss
@@ -52,6 +52,9 @@
   }
 }
 .mt{
+  &-0{
+    margin-top:0 !important;
+  }
   &-3{
     margin-top:1.5em;
   }
@@ -186,6 +189,7 @@ button{
   z-index: 100;
   left: 0;
   top: 0;
+  background-color:#fff;
   &.bg{
     background-color:#fff;
   }
@@ -617,7 +621,6 @@ button{
     height:100%;
     width:100%;
     transition:all .3s;
-    box-shadow: 0 0 30px rgba(0, 0, 0, .1);
     &.swiper-slide{
       transform:scale(0.5) translateX(90px);
       opacity: .5;
@@ -646,7 +649,7 @@ button{
       position:absolute;
       left:50%;
       transform:translateX(-50%);
-      bottom:-100px;
+      bottom:-50px;
       display:flex;
       transition:all .3s;
       margin:0 !important;
@@ -1374,6 +1377,7 @@ button{
 
 .el-dialog{
   margin:0 auto !important;
+  border-radius: 8px !important;
   &__wrapper{
     display:flex;
     align-items: center;
@@ -1398,4 +1402,334 @@ button{
   font-size:2rem;
   font-weight: bold !important;
   color:#000 !important;
+}
+
+.store{
+  background-color:#F4F5F7;
+  &-wrap{
+    max-width: $pc;
+    margin: 0 auto;
+    padding:100px 0;
+  }
+  &-top{
+    display:flex;
+    margin-bottom:100px;
+    &--left{
+      flex:1;
+      padding-right:70px;
+      display:flex;
+      .img-wrap{
+        width:500px;
+        height:1000px;
+        background-color:#fff;
+        border-radius: 10px;
+        margin-right:15px;
+        img{
+          width:100%;
+        }
+      }
+      .img-list{
+        height:800px;
+        padding-right:20px;
+        &--item{
+          width:150px;
+          height:300px;
+          margin-bottom:13px;
+          .btn{
+            filter: brightness(0.8);
+            background-color:#fff;
+            border-radius: 10px;
+            border:1px solid transparent;
+            &.active{
+              filter:none;
+              border:1px solid $colPrimary;
+            }
+          }
+          &:last-child{
+            margin-bottom:0;
+          }
+          img{
+            width:100%;
+          }
+        }
+      }
+    }
+    &--right{
+      flex:1;
+      .category{
+        .badge{
+          display:inline-flex;
+          align-items: center;
+          background-color:$colPrimary;
+          color:#fff;
+          font-size:1.4rem;
+          height:26px;
+          border-radius: 20px;
+          padding:0 10px;
+          margin-right:5px;
+        }
+      }
+      .tit{
+        font-size:2.5rem;
+        font-weight: 500;
+        line-height: 1.3;
+        margin:10px 0 30px;
+      }
+      .price{
+        .top{
+          font-size:1.6rem;
+          color:#888;
+          text-decoration: line-through;
+          margin-bottom:10px;
+        }
+        .bottom{
+          .per{
+            font-size:3rem;
+            color:$colPrimary;
+            font-weight: 600;
+            margin-right:10px;
+          }
+          .num{
+            font-size:4rem;
+            font-weight: 600;
+            margin-right:5px;
+          }
+          .won{
+            font-size:1.6rem;
+          }
+        }
+      }
+      .info-list{
+        border-top:1px solid #ddd;
+        margin-top:30px;
+        padding-top:35px;
+        &--item{
+          margin-bottom:20px;
+          font-size:1.6rem;
+          display:flex;
+          line-height: 1.5;
+          .label{
+            color:#888;
+            min-width:100px;
+            display:inline-block;
+          }
+          .hash{
+            .text{
+              margin-right:3px;
+              white-space: nowrap;
+              &:before{
+                content:"#";
+              }
+            }
+          }
+        }
+      }
+      .intro{
+        margin-top:50px;
+        .label{
+          font-size:1.6rem;
+        }
+        .text{
+          margin-top:10px;
+          background-color:#fff;
+          font-size:1.6rem;
+          padding:20px;
+          border-radius: 10px;
+          line-height: 1.5;
+          word-break: keep-all;
+          height:200px;
+        }
+      }
+      .button-wrap{
+        margin-top:40px;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        .btn{
+          &-blue{
+            width:208px;
+            height:50px;
+            border-radius: 50px;
+            font-size:1.6rem;
+          }
+          &.like{
+            width:50px;
+            height:50px;
+            background-image: url(../static/images/icon/heart_line.svg);
+            background-repeat: no-repeat;
+            background-color:#fff;
+            background-position:50% 55%;
+            background-size:20px;
+            border:1px solid #b4b4b4;
+            border-radius: 25px;
+            margin-left:10px;
+            &.active{
+              background-image: url(../static/images/icon/heart_fill.svg);
+              border-color:#DC4C4C;
+            }
+          }
+        }
+      }
+    }
+  }
+  &-con{
+    &--menu{
+      display:flex;
+      padding:20px 0;
+      position:sticky;
+      top:70px;
+      background-color:#F4F5F7;
+      z-index: 10;
+      .btn{
+        flex:1;
+        height:50px;
+        background-color:#ddd;
+        color:#888;
+        border-radius: 5px;
+        margin-right:13px;
+        font-size:1.6rem;
+        &:last-child{
+          margin-right:0;
+        }
+        &.active{
+          background-color:$colPrimary;
+          color:#fff;
+        }
+      }
+    }
+    &--section{
+      .images{
+        display:flex;
+        flex-wrap: wrap;
+        .img-wrap{
+          flex:1;
+          min-width:calc(50% - 20px);
+          background-color:#fff;
+          border-radius: 10px;
+          margin-bottom:40px;
+          &:nth-child(2n){
+            margin-left:40px;
+          }
+          img{
+            width:100%;
+          }
+        }
+      }
+      .comment{
+        display:flex;
+        align-items: center;
+        .left{
+          width:270px;
+          height:154px;
+          .star{
+            width:100%;
+            height:100%;
+            display:flex;
+            .num{
+              width:100%;
+              height:100%;
+              display:flex;
+              align-items: center;
+              justify-content: center;
+              color:#F7B83F;
+              font-size:6rem;
+              font-weight: 600;
+              &:before{
+                content:"";
+                display:inline-block;
+                width:73px;
+                height:73px;
+                background:url(../static/images/icon/star-fill.svg)no-repeat center;
+                margin-right:20px;
+              }
+            }
+          }
+        }
+        .right{
+          width:calc(100% - 270px);
+          .el-rate{
+            margin-bottom:20px;
+            .el-rate__icon{
+              font-size:2.5rem;
+            }
+          }
+        }
+        &-list{
+          margin-top:50px;
+          &--item{
+            border-top:1px solid #ddd;
+            padding:30px 0;
+            display:flex;
+            .left{
+              width:270px;
+              display:flex;
+              font-size:1.6rem;
+              .img-wrap{
+                display:flex;
+                align-items: center;
+                justify-content: center;
+                background-color:#d9d9d9;
+                width:80px;
+                height:80px;
+                border-radius: 40px;
+                margin-right:20px;
+              }
+              .name{
+                height: 80px;
+                line-height: 80px;
+              }
+            }
+            .right{
+              width:calc(100% - 270px);
+              display: flex;
+              flex-direction: column;
+              justify-content: center;
+              .el-rate{
+                margin-bottom:5px;
+              }
+              .text{
+                line-height:1.5;
+                word-break: keep-all;
+                font-size:1.6rem;
+              }
+              .re{
+                background-color:#fff;
+                border:1px dashed #ddd;
+                border-radius: 10px;
+                padding:20px;
+                margin-top:20px;
+                font-size:1.6rem;
+                .top{
+                  margin-bottom:10px;
+                  font-weight: 500;
+                  color:$colPrimaryHover;
+                }
+              }
+            }
+          }
+        }
+        &-write{
+          display: flex;
+          .input-textarea{
+            padding:20px;
+            font-size:1.6rem;
+            line-height: 1.5;
+            border-color:transparent;
+            border-radius: 10px;
+            margin-right:10px;
+            width:100%;
+          }
+          .btn-blue{
+            border-radius: 10px;
+            width:170px;
+            font-size:1.6rem;
+          }
+        }
+      }
+      .guide{
+        margin:50px 0 20px;
+        font-size:1.6rem;
+      }
+    }
+  }
 }
