--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -122,7 +122,7 @@
         padding: 3px 10px;
         font-size: 1.2rem;
         outline: none;
-        width: 150px;
+        width: 155px;
         border-radius: 5px;
         position: absolute;
         left: 20px;
@@ -202,7 +202,6 @@
     .chapter {
       &-list {
         border-top: 1px solid #3f3f3f;
-
         &--item {
           position: relative;
         }
@@ -216,6 +215,7 @@
         position:relative;
         label{
           margin-bottom: 0;
+          height:20px;
           span{
             display:inline-block;
             vertical-align: middle;
@@ -225,6 +225,9 @@
             text-overflow: ellipsis;
             color: #fff;
             cursor: pointer;
+            height: 13px;
+            position: relative;
+            top: 1px;
           }
           input[type=radio]:checked ~ .arrow{
             display:block;
@@ -248,6 +251,9 @@
           .chapter-sound {
             opacity: 1;
           }
+        }
+        .chapter-sound.active{
+          opacity: 1;
         }
       }
 
@@ -311,7 +317,7 @@
         right:0;
         bottom:0;
         z-index: 100;
-        width:calc(100vw - 250px);
+        width:calc(100vw - 240px);
         height:calc(100vh - 80px);
         background-color: rgba(0, 0, 0, .5);
         display:flex;
@@ -1023,7 +1029,6 @@
           }
           .input-text{
             width:100%;
-            margin:0 10px 0 0;
             height:38px;
           }
           .input-file{
@@ -1272,6 +1277,20 @@
       }
       &.type3{
         height: auto;
+      }
+      &.type4{
+        max-height: 411px;
+        padding-right:20px;
+        .thumbnail-list--item{
+          &:nth-child(3n){
+            margin-right:0;
+          }
+          &:hover{
+            .btn-wrap{
+              opacity: 1;
+            }
+          }
+        }
       }
     }
     &--item{
@@ -1877,6 +1896,7 @@
         padding:7px;
         box-shadow: 0 8px 0 rgba(0, 0, 0, .5);
         border-radius: 10px;
+        height:40px;
       }
     }
     &-subjective{
@@ -2049,13 +2069,13 @@
         &:after {
           content: "";
           display: block;
-          width: 70%;
-          height: 70%;
+          width: 9px;
+          height: 9px;
           background: $colPrimary;
           border-radius: 50%;
           position: absolute;
-          left: 15%;
-          top: 15%;
+          left: 2px;
+          top: 2px;
         }
       }
 
@@ -2145,6 +2165,7 @@
       justify-content: center;
       cursor: pointer;
       transition:background-color .3s;
+      margin-left:10px;
       &:hover{
         background-color:$colBlueHover;
       }
@@ -2192,6 +2213,9 @@
     display:flex;
     padding:0 10px;
     align-items: center;
+    &.type2{
+      padding:10px 0 0;
+    }
   }
   &-spot{
     flex:3;
@@ -2343,6 +2367,14 @@
         &:checked + .box{
           border:2px solid $colPrimary;
         }
+      }
+      .text{
+        width:100%;
+        height:100%;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        margin-top:-10%;
       }
       .box{
         position:absolute;
