구글 애드센스

--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -78,6 +78,7 @@
 
               li {
                 margin-right: 15px;
+                cursor: pointer;
 
                 .kakao {
                   position: absolute;
