--- a/assets/common.scss
+++ b/assets/common.scss
@@ -1089,6 +1089,16 @@ button{
         .input{
           padding:10px 15px;
           width:100%;
+          height:40px;
+          &.mr{
+            margin-right:5px;
+          }
+          &.sm{
+            width:35%;
+          }
+          &:read-only{
+            background-color:#eee;
+          }
         }
         .select{
           width:40%;
@@ -1103,11 +1113,11 @@ button{
             width:100% !important;
           }
           &.sm{
-            width:30%;
+            width:40%;
           }
         }
         .button{
-          height:42px;
+          height:40px;
           padding:0 15px;
           border-radius: 10px;
           margin:0 0 0 5px;
