--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -43,9 +43,10 @@
         }
 
         .title {
-          margin-top: 50px;
+          margin-top: 40px;
           color: #fff;
           font-size: 25px;
+          line-height: 1.5;
         }
 
         .list {
@@ -66,6 +67,23 @@
 
           dd {
             font-weight: bold;
+            max-height: 350px;
+            overflow: auto;
+            padding-right:20px;
+            width:70%;
+            min-height: 18px;
+            &::-webkit-scrollbar {
+              width: 10px;
+            }
+            &::-webkit-scrollbar-thumb {
+              background-color: #9fdfd7;
+              border-radius: 5px;
+              background-clip: padding-box;
+              border: 2px solid transparent;
+            }
+            &::-webkit-scrollbar-track {
+              background-color: transparent;
+            }
 
             textarea {
               width: 100%;
