--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -69,18 +69,21 @@
             font-weight: bold;
             max-height: 350px;
             overflow: auto;
-            padding-right:20px;
-            width:70%;
+            padding-right: 20px;
+            width: 70%;
             min-height: 18px;
+
             &::-webkit-scrollbar {
               width: 10px;
             }
+
             &::-webkit-scrollbar-thumb {
               background-color: #9fdfd7;
               border-radius: 5px;
               background-clip: padding-box;
               border: 2px solid transparent;
             }
+
             &::-webkit-scrollbar-track {
               background-color: transparent;
             }
@@ -1962,6 +1965,8 @@
     z-index: 1;
     width: calc(100% - 36px);
     height: calc(100% - 30px);
+    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     border-radius: 40px;
     overflow: hidden;
 
