--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -1921,6 +1921,7 @@
         margin-left: 0;
         left: 0;
         margin-top: 0;
+        overflow: hidden;
       }
 
       .preview-img .background {
