--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -231,6 +231,9 @@
       }
     }
   }
+  .preview-img .character-2 .character:first-child{
+    left:-45%;
+  }
 }
 
 // PREVIEW
@@ -1915,7 +1918,7 @@
       #preview .app-device__warp {
         // height: 100vh;
         height: 100vh;
-        height: calc(var(--vh, 1vh) * 100);
+        // height: calc(var(--vh, 1vh) * 100);
         width: 100%;
         top: 0;
         margin-left: 0;
@@ -2022,11 +2025,40 @@
 
       &-2 {
         .character:first-child {
-          left: -45%;
+          left: -40%;
         }
 
         .character:last-child {
           left: 15%;
+        }
+      }
+    }
+    @media (max-width: 800px) {
+      .character{
+        &-2 {
+          .character:first-child {
+            left: calc(100px - 30vh);
+          }
+
+          .character:last-child {
+            left: unset;
+            right:calc(100px - 30vh);
+          }
+        }
+      }
+    }
+    @media (max-width: 300px) {
+      .character{
+        height:100%;
+        &-2 {
+          .character:first-child {
+            left: calc(100px - 30vh);
+          }
+
+          .character:last-child {
+            left: unset;
+            right:calc(100px - 30vh);
+          }
         }
       }
     }
@@ -2055,6 +2087,7 @@
         left: 0;
         top: -13px;
         color: #fff;
+        font-weight: 600;
 
         &.font-sm {
           font-size: 1.3rem;
@@ -2071,6 +2104,8 @@
         width: 100%;
         word-break: break-all;
         line-height: 1.5;
+        font-weight: 500;
+        text-shadow: 0 0 2px #fff;
 
         &.font-sm {
           font-size: 1.3rem;
@@ -2436,6 +2471,7 @@
         box-shadow: 0 8px 0 rgba(0, 0, 0, .5);
         border-radius: 10px;
         height: 40px;
+        font-weight: 500;
       }
     }
 
