--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -3017,3 +3017,24 @@
     }
   }
 }
+
+.loding-chapter{
+  background: rgb(0, 0, 0);
+  width:100%;
+  height:100%;
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position:absolute;
+  left:0;
+  top:0;
+  opacity: 0;
+  z-index: -1;
+  transition:all .3s;
+  line-height: 2;
+  &.active{
+    opacity: 1;
+    z-index: 9999;
+  }
+}
