--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -240,8 +240,6 @@
 }
 
 // PREVIEW
-
-
 .maker {
   &-header {
     height: 80px;
@@ -773,9 +771,6 @@
 
         &.preview-profile {
           background: #fff;
-          // .character img{
-          //   width:110%;
-          // }
         }
       }
 
@@ -818,10 +813,6 @@
       &:last-child {
         margin-right: 0;
       }
-
-      // &.bottom-none{
-      //   height: calc(100vh - 100px);
-      // }
       .setting-con {
         width: 100%;
         padding: 20px;
@@ -1569,12 +1560,10 @@
               height: 40px;
               border-radius: 20px;
               overflow: hidden;
-              // border:1px solid $colSub;
               position: relative;
               background-color: #000;
 
               &:nth-child(2) {
-                // border-color:$colPrimary;
                 margin-top: -15px;
               }
 
@@ -1877,10 +1866,6 @@
   height: 750px;
 
   &-wrap {
-    // display: flex;
-    // align-items: center;
-    // justify-content: center;
-    // background: #000;
     height: 100vh;
     overflow: hidden;
 
@@ -1919,17 +1904,10 @@
         height: -webkit-fill-available;
       }
 
-      #preview .app-device__warp { //모바일이슈
+      #preview .app-device__warp {
         height: 100vh;
         height: calc(var(--vh, 1vh) * 100);
         transform:height .3s;
-
-        // @media not all and (min-resolution:.001dpcm) {
-        //   @supports (-webkit-appearance:none) {
-        //     height: calc(var(--vh, 1vh) * 100);
-        //   }
-        // }
-
         width: 100%;
         top: 0;
         margin-left: 0;
@@ -1984,17 +1962,6 @@
     height: calc(100% - 30px);
     border-radius: 40px;
     overflow: hidden;
-
-    // &:after{
-    //   content:"";
-    //   display:block;
-    //   width: 100%;
-    //   height: 100%;
-    //   position:absolute;
-    //   top: 0;
-    //   left: 0;
-    //   background:#000;
-    // }
     @media (max-width: 800px) {
       width: 100%;
       height: 100%;
@@ -2026,8 +1993,6 @@
       top: unset;
       bottom: -25%;
       left: -12%;
-
-      // transform:translateX(-50%);
       &-1,
       &-2 {
         width: 100%;
@@ -3022,7 +2987,7 @@
   }
 }
 
-.loding-chapter{
+.loading-chapter{
   background: rgb(0, 0, 0);
   width:100%;
   height:100%;
@@ -3040,5 +3005,24 @@
   &.active{
     opacity: 1;
     z-index: 9999;
+  }
+  .box{
+    padding:20px;
+    position:relative;
+    z-index: 1;
+    font-size:1.6rem;
+    text-align: center;
+    max-width: 90%;
+  }
+  .bg{
+    position:absolute;
+    left:0;
+    right:0;
+    top:0;
+    bottom:0;
+    img{
+      width:100%;
+      height: auto;
+    }
   }
 }
