--- a/assets/common.scss
+++ b/assets/common.scss
@@ -400,7 +400,7 @@ button{
         color: $textCol1;
         white-space: nowrap;
         position:relative;
-        &:active, &:visited, &:hover{
+        &:hover{
           color:$textCol1;
         }
         &:before{
@@ -881,8 +881,8 @@ button{
           flex-direction: column;
           align-items: center;
           .img-wrap.play{
-            width:40vw;
-            height:80vw;
+            width:50vw;
+            height:100vw;
             margin:0 0 40px 0;
             max-width: 300px;
             max-height: 600px;
