--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -2005,6 +2005,40 @@
       left: unset;
       top: unset;
     }
+    &.icon{
+      position: absolute;
+      left:40px;
+      top:40px;
+      border-radius: 50px;
+      padding:10px;
+      width:40px;
+      height:70px;
+      z-index: 99;
+      display:flex;
+      flex-direction: column;
+      justify-content: space-around;
+      .btn{
+        width:20px;
+        height:20px;
+        background-repeat: no-repeat;
+        background-position:center;
+        background-size:100%;
+        &.back{
+          position:relative;
+          left:-2px;
+          background-image: url(../static/images/icon/back_bl.svg);
+          &.wh{
+            background-image: url(../static/images/icon/back_wh.svg);
+          }
+        }
+        &.camera{
+          background-image: url(../static/images/icon/camera_bl.svg);
+          &.wh{
+            background-image: url(../static/images/icon/camera_wh.svg);
+          }
+        }
+      }
+    }
   }
 
   &-img {
