--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -1888,7 +1888,7 @@
 
         &:hover {
           .btn-wrap {
-            opacity: 1;
+            // opacity: 1;
           }
         }
       }
