--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -2024,6 +2024,7 @@
         background-position:center;
         background-size:100%;
         &.back{
+          width:21px;
           position:relative;
           left:-2px;
           background-image: url(../static/images/icon/back_bl.svg);
@@ -2196,9 +2197,15 @@
       top: 100px;
       transform: translateX(-50%);
       width: 70%;
+      max-height: 120px;
+      display:flex;
+      align-items: center;
+      justify-content: center;
 
       img {
-        width: 100%;
+        width: auto;
+        max-width: 100%;
+        height:100%;
       }
     }
 
