--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -2013,8 +2013,8 @@
       top:40px;
       border-radius: 50px;
       padding:10px;
-      width:40px;
-      height:70px;
+      width:auto;
+      height:75px;
       z-index: 99;
       display:flex;
       flex-direction: column;
@@ -2133,7 +2133,6 @@
 
       .name {
         font-weight: 500;
-        background-color: #222;
         padding: 10px 0 11px;
         width: 100px;
         text-align: center;
