--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -677,6 +677,7 @@
         .delete-btn {
           right: 10px;
           top: 10px;
+          padding:10px 20px;
         }
 
         .guide {
