--- a/assets/reset.scss
+++ b/assets/reset.scss
@@ -230,6 +230,7 @@ body {
 html {
 	font-size: 10px !important;
 	color: $textCol1;
+  overflow-x: auto;
 	// @media (max-width: $mobile) {
 	//   font-size: 9px !important;
 	// }
