--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -2411,7 +2411,7 @@
         text-align: right;
         border-top: 3px solid #fff;
         font-size: 3.2rem;
-        background-color: rgba(255, 255, 255, .5);
+        background-color: rgba(255, 255, 255, .7);
         position: absolute;
         left: 0;
         top: 60%;
@@ -2452,7 +2452,7 @@
 
       .profile {
         padding: 20px;
-        background: rgba(255, 255, 255, .5);
+        background: rgba(255, 255, 255, .7);
         width: 100%;
         height: 190px;
         position: absolute;
@@ -2469,6 +2469,7 @@
           margin:0 10px;
           white-space: pre-line;
           margin-top:-20px;
+          font-weight: 500;
         }
       }
 
